feat: release 1.2